
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_20__ TYPE_9__ ;
typedef struct TYPE_19__ TYPE_8__ ;
typedef struct TYPE_18__ TYPE_7__ ;
typedef struct TYPE_17__ TYPE_6__ ;
typedef struct TYPE_16__ TYPE_5__ ;
typedef struct TYPE_15__ TYPE_4__ ;
typedef struct TYPE_14__ TYPE_3__ ;
typedef struct TYPE_13__ TYPE_2__ ;
typedef struct TYPE_12__ TYPE_1__ ;
typedef struct TYPE_11__ TYPE_10__ ;


typedef int qboolean ;
struct TYPE_20__ {int integer; } ;
struct TYPE_19__ {float value; } ;
struct TYPE_18__ {int integer; } ;
struct TYPE_17__ {float value; } ;
struct TYPE_16__ {int integer; } ;
struct TYPE_15__ {float value; } ;
struct TYPE_14__ {int integer; } ;
struct TYPE_13__ {float value; } ;
struct TYPE_12__ {int integer; } ;
struct TYPE_11__ {float value; } ;


 char* Key_GetBinding (int) ;
 scalar_t__ Q_stricmp (char*,char*) ;
 TYPE_10__* j_forward ;
 TYPE_9__* j_forward_axis ;
 TYPE_8__* j_pitch ;
 TYPE_7__* j_pitch_axis ;
 TYPE_6__* j_side ;
 TYPE_5__* j_side_axis ;
 TYPE_4__* j_up ;
 TYPE_3__* j_up_axis ;
 TYPE_2__* j_yaw ;
 TYPE_1__* j_yaw_axis ;
 int qfalse ;

__attribute__((used)) static qboolean KeyToAxisAndSign(int keynum, int *outAxis, int *outSign)
{
 char *bind;

 if (!keynum)
  return qfalse;

 bind = Key_GetBinding(keynum);

 if (!bind || *bind != '+')
  return qfalse;

 *outSign = 0;

 if (Q_stricmp(bind, "+forward") == 0)
 {
  *outAxis = j_forward_axis->integer;
  *outSign = j_forward->value > 0.0f ? 1 : -1;
 }
 else if (Q_stricmp(bind, "+back") == 0)
 {
  *outAxis = j_forward_axis->integer;
  *outSign = j_forward->value > 0.0f ? -1 : 1;
 }
 else if (Q_stricmp(bind, "+moveleft") == 0)
 {
  *outAxis = j_side_axis->integer;
  *outSign = j_side->value > 0.0f ? -1 : 1;
 }
 else if (Q_stricmp(bind, "+moveright") == 0)
 {
  *outAxis = j_side_axis->integer;
  *outSign = j_side->value > 0.0f ? 1 : -1;
 }
 else if (Q_stricmp(bind, "+lookup") == 0)
 {
  *outAxis = j_pitch_axis->integer;
  *outSign = j_pitch->value > 0.0f ? -1 : 1;
 }
 else if (Q_stricmp(bind, "+lookdown") == 0)
 {
  *outAxis = j_pitch_axis->integer;
  *outSign = j_pitch->value > 0.0f ? 1 : -1;
 }
 else if (Q_stricmp(bind, "+left") == 0)
 {
  *outAxis = j_yaw_axis->integer;
  *outSign = j_yaw->value > 0.0f ? 1 : -1;
 }
 else if (Q_stricmp(bind, "+right") == 0)
 {
  *outAxis = j_yaw_axis->integer;
  *outSign = j_yaw->value > 0.0f ? -1 : 1;
 }
 else if (Q_stricmp(bind, "+moveup") == 0)
 {
  *outAxis = j_up_axis->integer;
  *outSign = j_up->value > 0.0f ? 1 : -1;
 }
 else if (Q_stricmp(bind, "+movedown") == 0)
 {
  *outAxis = j_up_axis->integer;
  *outSign = j_up->value > 0.0f ? -1 : 1;
 }

 return *outSign != 0;
}
